--- a/style.css
+++ b/style.css
@@ -54,3 +54,13 @@ nav {
     align-items: center;
     gap: 20px;
 }
+
+
+.bannerWrapper {
+    max-width: 100vw;
+    height: calc(100vh - 91px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
